src/test/run-pass/unique-log.rs
fn main() {
    let i = ~100;
    log(error, i);
}