src/test/compile-fail/unique-pinned-nocopy-2.rs
// error-pattern: mismatched kind

resource r(b: bool) {
}

fn main() {
    let i = ~r(true);
}